fix: [000] Aligner correctement les éléments du menu

--- a/ui/src/theme/scss/styles.scss
+++ b/ui/src/theme/scss/styles.scss
@@ -353,3 +353,7 @@ input.blue-checkbox[type='checkbox'] {
     }
   }
 }
+
+.align-left {
+  text-align: left;
+}
